Fixed the buttons contrast to meet the WCAG requirements.

--- a/resources/js/features/root/layout/layout.module.scss
+++ b/resources/js/features/root/layout/layout.module.scss
@@ -47,5 +47,5 @@ $border: rgba(92, 92, 92, 0.283);
   justify-content: space-between;
   justify-items: center;
   padding: 0.5rem;
-  color: #949494;
+  color: #767676;
 }
